chg: [updates] intro

--- a/2-ail-cti-use-cases/ail-training.tex
+++ b/2-ail-cti-use-cases/ail-training.tex
@@ -153,7 +153,25 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Threat Intelligence Cycle}
+   \frametitle{Background}
+\begin{itemize}
+    \item Over the past five years, we have developed the AIL project\footnote{\url{https://www.ail-project.org/}} to fulfill our needs at CIRCL in intelligence gathering and analysis.
+    \item As AIL gained popularity, an increasing number of users began integrating it into their {\bf threat intelligence processes and workflows}.
+    \item In this presentation, we outline some of the processes where AIL can serve as a valuable tool, {\bf facilitating and enhancing the work of intelligence analysts}.
+\end{itemize}
+\end{frame}
+
+\begin{frame}
+   \frametitle{AIL overview}
+    \begin{itemize}
+        \item The AIL Project is an open-source framework comprising various modules designed for the {\bf collection, crawling, digging, and analysis of unstructured data}.
+        \item AIL features an extensible Python-based framework for the {\bf analysis of unstructured information}, collected either through an advanced Crawler manager or from various feeders, including social networks and custom feeders.
+        \item AIL also provides support for actively {\bf crawling Tor} hidden services, as well as crawling protected websites and forums by utilizing pre-recorded session cookies.
+    \end{itemize}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Threat Intelligence Process}
     \begin{adjustbox}{max totalsize={.9\textwidth}{.7\textheight},center}
 \begin{tikzpicture}[node distance=1.5cm, tblock/.style = {draw, trapezium, minimum height=10mm, 
                  trapezium left angle=75, trapezium right angle=105, align=center}, block/.style = {draw, rectangle, draw=green!60, fill=green!5, minimum height=10mm, minimum width=28mm,align=center}]
