chg: [cti] updated slides

--- a/2-ail-cti-use-cases/ail-training.tex
+++ b/2-ail-cti-use-cases/ail-training.tex
@@ -228,6 +228,17 @@
 \end{frame}
 
 \begin{frame}
+   \frametitle{{\it Analysis} - automatic detection from collection}
+   \begin{itemize}
+     \item Processing automatically collected information can be a challenging task.
+     \item AIL processes all the collected items for any {\bf hunting rules and utilizes MISP taxonomies to tag the matching information}.
+   \end{itemize}
+    \begin{center}
+        \includegraphics[scale=0.2]{images/ail-chat-detection.png}
+    \end{center}
+\end{frame}
+
+\begin{frame}
     \frametitle{{\it Analysis} - evaluating vulnerability severity/risk}
     \begin{itemize}
          \item What is the visibility, usage, mentions, or risk of a vulnerability observed in forums, channels, pastes, or websites?
