chg: [cti] automated crawling

--- a/2-ail-cti-use-cases/ail-training.tex
+++ b/2-ail-cti-use-cases/ail-training.tex
@@ -217,6 +217,18 @@
 \end{frame}
 
 \begin{frame}
+    \frametitle{{\it Collection} - automate crawling}
+    
+\begin{itemize}
+    \item Crawling can be a challenging task, for example, gathering all the blog posts from ransomware groups, which can be demanding for an analyst.
+    \item AIL offers a crawling feature that can {\bf initiate regular crawls using a standard spawned browser}.
+\end{itemize}
+    \begin{center}
+        \includegraphics[scale=0.17]{images/ail-crawling.png}
+    \end{center}
+\end{frame}
+
+\begin{frame}
    \frametitle{{\it Processing} - extracting selector/patterns}
 	\begin{itemize}
 		\item Detecting specific search patterns in a large dataset, such as a significant ransomware leak, can be challenging for analysts.
