chg: [cti-use-case] updated

--- a/2-ail-cti-use-cases/ail-training.tex
+++ b/2-ail-cti-use-cases/ail-training.tex
@@ -164,7 +164,7 @@
 \begin{frame}
    \frametitle{AIL overview}
     \begin{itemize}
-        \item The AIL Project is an open-source framework comprising various modules designed for the {\bf collection, crawling, digging, and analysis of unstructured data}.
+        \item The AIL Project is an open-source framework\footnote{\url{https://github.com/ail-project}} comprising various modules designed for the {\bf collection, crawling, digging, and analysis of unstructured data}.
         \item AIL features an extensible Python-based framework for the {\bf analysis of unstructured information}, collected either through an advanced Crawler manager or from various feeders, including social networks and custom feeders.
         \item AIL also provides support for actively {\bf crawling Tor} hidden services, as well as crawling protected websites and forums by utilizing pre-recorded session cookies.
     \end{itemize}
@@ -212,6 +212,17 @@
       \item Can you determine if our {\bf sector is a target} of this threat actor?
       \item Have you come across phishing kits targeting our bank/service or any instances of our {\bf data being stolen} on the "dark web"?
   \end{itemize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Challenges and opportunity}
+  \begin{itemize}
+   \item {\bf Reducing repetitive tasks} for the analysts.
+   \item {\bf Preparing factual intelligence evidence} for intelligence production, including human-readable reports and MISP structured intelligence.
+   \item {\bf Correlating information} from multiple sources, especially when different analysts are working with different sources on their end.
+   \item {\bf Facilitating the integration} of "intelligence requests" from our constituents.
+\end{itemize}
+
 \end{frame}
 
 \begin{frame}
@@ -292,6 +303,17 @@
     \begin{center}
       \includegraphics[scale=0.20]{images/ail-yara.png}
       \includegraphics[scale=0.15]{images/ail-yara-retrohunt.png}
+    \end{center}
+\end{frame}
+
+\begin{frame}
+    \frametitle{{\it Production} collecting evidences}
+	\begin{itemize}
+		\item Analysts need to gather evidence, insights, and intelligence to produce intelligence reports.
+        \item AIL can support the creation of reports by offering a straightforward method to {\bf organize discoveries for investigation}.
+	\end{itemize}
+    \begin{center}
+       \includegraphics[scale=0.15]{images/ail-investigation-2.png}
     \end{center}
 \end{frame}
 
