chg: [tex] minor changes, added 2023 IM Crawl

--- a/2-ail-use-cases/ail-training.tex
+++ b/2-ail-use-cases/ail-training.tex
@@ -4,7 +4,7 @@
           bullet=circle,% Use circles instead of squares for bullets.
           titleline=true,% Show a line below the frame title.
           alternativetitlepage=true,% Use the fancy title page.
-	  titlepagelogo=logo-circl.pdf,% Logo for the first page.
+          titlepagelogo=logo-circl.pdf,% Logo for the first page.
 %          watermark=watermark-polito,% Watermark used in every page.
 %          watermarkheight=100px,% Height of the watermark.
 %          watermarkheightmult=4,% The watermark image is 4 times bigger
@@ -245,9 +245,10 @@
     \large{History:}
     \begin{itemize}
         \item AIL initially started as an \textbf{internship project} (2014) to evaluate the feasibility to automate the analysis of (un)structured information to find leaks.
-        \item In 2019, AIL framework is an \textbf{open source software} in Python. The software is actively used (and maintained) by CIRCL and many organisations.
+        \item The AIL framework is an \textbf{open source software} in Python. The software is actively used (and maintained) by CIRCL and many organisations.
         \item In 2020, AIL framework became a complete project called \textbf{ail project}\footnote{\url{https://github.com/ail-project/}}.
         \item In 2023, AIL framework version 5.0 released with a new datastorage back-end.
+        \item In 2023, AIL framework version 5.3 released with a new IM crawl functionality.
     \end{itemize}
 \end{frame}
 
