chg: [cti use-case] updated

--- a/2-ail-cti-use-cases/ail-training.tex
+++ b/2-ail-cti-use-cases/ail-training.tex
@@ -261,6 +261,17 @@
 \end{frame}
 
 \begin{frame}
+   \frametitle{{\it Processing} - deduplicating source/information}
+    \begin{itemize}
+    \item When collecting data from numerous sources, encountering duplicate information is common, and distinguishing between them can be challenging.
+    \item AIL's correlation between page titles, screenshots, and HTTP headers matching helps {\bf identify copy-cat sources}.
+\end{itemize} 
+    \begin{center}
+        \includegraphics[scale=0.15]{images/ail-deduplicating.png}
+   \end{center}
+\end{frame}
+
+\begin{frame}
    \frametitle{{\it Analysis} - automatic detection from collection}
    \begin{itemize}
      \item Processing automatically collected information can be a challenging task.
@@ -279,6 +290,17 @@
     \end{itemize}
     \begin{center}
          \includegraphics[scale=0.15]{images/ail-CVE-example.png}
+    \end{center}
+\end{frame}
+
+\begin{frame}
+    \frametitle{{\it Analysis} - Standardising labels and taxonomies}
+	\begin{itemize}
+		\item Attribution and classification can be challenging for analysts. Facilitating integration with other tools, processes, and teams.
+		\item AIL {\bf leverages the entire MISP galaxy, including threat actor data, taxonomies}, and the ability to assign tags to every item.
+	\end{itemize}
+    \begin{center}
+        \includegraphics[scale=0.15]{images/ail-galaxy.png}
     \end{center}
 \end{frame}
 
