chg: [cti-use-case] internal capabilities discussion included

--- a/2-ail-cti-use-cases/ail-training.tex
+++ b/2-ail-cti-use-cases/ail-training.tex
@@ -340,11 +340,19 @@
 \end{frame}
 
 \begin{frame}
+    \frametitle{Improving internal capabilities}
+    \begin{center}
+        {\large Whilst buying ready made intelligence is easy, you see here that going from a black box solution of questionable quality to something that you can vet and validate can be easily implemented - the costs will also be {\bf invested in your internal experts rather than an opaque supplier}.}
+    \end{center}
+\end{frame}
+
+\begin{frame}
     \frametitle{Conclusion}
 \begin{itemize}
     \item While AIL can be a valuable tool for {\bf organisations dealing with data leaks and information breaches}, it's important to remember that it is primarily designed for information leak analysis and not for the entire threat intelligence process.
     \item Organizations should use \textbf{AIL in conjunction with other threat intelligence solutions} and processes to establish a comprehensive threat intelligence strategy.
     \item AIL is an open-source project, and if you discover modules that could assist in your processes, please let us know or contribute directly.
+    \item Establishing {\bf consistent and reproducible intelligence processes} throughout your organization.
 \end{itemize}
 \end{frame}
 
@@ -352,14 +360,16 @@
 \begin{frame}
 \frametitle{Links}
     \begin{itemize}
-        \item AIL project \url{https://github.com/ail-project} ({\bf all components including feeders and crawler infrastructure})
-        \item AIL framework \url{https://github.com/ail-project/ail-framework} ({\bf analysis framework})
-        \item Training materials and slide deck \url{https://github.com/ail-project/ail-training}
+        \item AIL project \url{https://github.com/ail-project} ({\bf all components including feeders and crawler infrastructure}).
+        \item AIL framework \url{https://github.com/ail-project/ail-framework} ({\bf analysis framework}).
+        \item Training materials and slide deck \url{https://github.com/ail-project/ail-training}.
+        \item Co-funded by European Union under joint threat analysis network (JTAN) project.
     \end{itemize}
     \begin{figure}
         \includegraphics[scale=0.10, angle=0]{images/ail-project.png}
     \end{figure}
 \end{frame}
+
 
 \end{document}
 
