chg: [short intro] add eu logo

--- a/3-ail-short-introduction/beamerinnerthemefancy.sty
+++ b/3-ail-short-introduction/beamerinnerthemefancy.sty
@@ -127,6 +127,7 @@
               \begin{centering}
                   \vbox{}\vfill
                   \includegraphics[height=.2\paperheight]{\beamer@fancy@titlepagelogo}
+                  \includegraphics[height=.13\paperheight]{images/eu.jpg}
                   \vfill
               \end{centering}
           \column{.5\textwidth}
