chg: [short-update] updated after release 5.5 and some fixes

--- a/3-ail-short-introduction/ail-training.tex
+++ b/3-ail-short-introduction/ail-training.tex
@@ -141,10 +141,10 @@
 % all authors
 %\author{\Large{Alexandre Dulaunoy}\\ \scriptsize{alexandre.dulaunoy@circl.lu}\\ \large{Aurelien Thirion}\\ \scriptsize{aurelien.thirion@circl.lu}\\ \large{Jean-Louis Huynen}\\ \scriptsize{jean-louis.huynen@circl.lu}\\ \Large{Sami Mokaddem}\\ \scriptsize{sami.mokaddem@circl.lu}}
 % all presentation
-\author{\large{Aurelien Thirion}\\ \scriptsize{aurelien.thirion@circl.lu}\\ \large{Gerard Wagener}\\ \scriptsize{gerard.wagener@circl.lu}}
+\author{\large{Team CIRCL}\\ \scriptsize{info@circl.lu}\\}
 \title{AIL Project}
 \subtitle{Practical and Efficient Data-Mining of Chats, Suspicious Websites, Forums and Tor Hidden-Services}
-\institute{info@circl.lu}
+\institute{CIRCL}
 \date{\today}
 
 \begin{document}
@@ -157,7 +157,7 @@
 \begin{frame}
    \frametitle{Background}
 \begin{itemize}
-    \item Over the past five years, we have developed the AIL project\footnote{\url{https://www.ail-project.org/}} to fulfill our needs at CIRCL in intelligence gathering and analysis.
+    \item Over the past seven years, we have developed the AIL project\footnote{\url{https://www.ail-project.org/}} to fulfill our needs at CIRCL in intelligence gathering and analysis.
     \item AIL features an extensible Python-based framework for the {\bf analysis of unstructured information}, collected either through an advanced Crawler manager or from various feeders, including social networks and custom feeders.
     \item The AIL Project is an {\bf open-source} framework\footnote{\url{https://github.com/ail-project}} comprising various modules designed for the {\bf collection, crawling, digging, and analysis of unstructured data}.
 	\begin{figure}
@@ -235,7 +235,7 @@
 %\end{frame}
 
 \begin{frame}
-    \frametitle{Processing - OCR - Next Release v5.5}
+    \frametitle{Processing - OCR}
     \begin{center}
         \includegraphics[scale=0.32]{screenshot/ail-ocr.png}
     \end{center}
@@ -337,28 +337,26 @@
 
 
 \begin{frame}
-    \frametitle{{\bf MISP - LEA}}
-		\begin{itemize}
-    		\item Law enforcement agency information sharing community
-    		\item AIL-LEA instance hosted by CIRCL
-    		\item Request access by sending a mail to {\bf info@misp-lea.org} or {\bf info@circl.lu}
-    		\item Request for free training {\bf info@misp-lea.org} or {\bf info@circl.lu}
-		\end{itemize}
-    	\begin{center}
-        	\includegraphics[scale=0.3]{images/misp-lea.png}
-    	\end{center}
+    \frametitle{\textbf{MISP - LEA}}
+    \begin{itemize}
+        \item Law Enforcement Agency Information Sharing Community
+        \item AIL-LEA Instance Hosted by CIRCL
+        \item Request access by sending an email to \textbf{info@misp-lea.org} or \textbf{info@circl.lu}
+        \item Request free training at \textbf{info@misp-lea.org} or \textbf{info@circl.lu}
+    \end{itemize}
+    \begin{center}
+        \includegraphics[scale=0.3]{images/misp-lea.png}
+    \end{center}
 \end{frame}
 
 
-
 \begin{frame}
-	\frametitle{Ongoing developments}
-        \begin{itemize}
-			\item 2FA - OTP
-            \item OCR extraction
-			\item Bloom filter filtering - PSS
-        	\item Relationships between Chats: message forwards, replies, ...
-        \end{itemize}
+    \frametitle{Ongoing Developments}
+    \begin{itemize}
+        \item Two-Factor Authentication (2FA) - One-Time Password (OTP)
+        \item Bloom Filter Filtering - Privaye Search Set (PSS)
+        \item Relationships between Chats: message forwards, replies, etc.
+    \end{itemize}
 \end{frame}
 
 
@@ -383,7 +381,6 @@
         \includegraphics[scale=0.1, angle=0]{images/ail-project.png}
     \end{figure}
 \end{frame}
-
 
 \end{document}
 
